--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,9 @@
   }
   
   .home,
-  .services,
-  .products,
+  .python-intro,
+  .applications,
+  .additional-skills,
   .sign-up {
     display: flex;
     height: 90vh;
@@ -16,7 +17,7 @@
     font-size: 3rem;
   }
   
-  .services {
+  .python-intro {
     background-image: url('../public/images/img-2.jpg');
     background-position: center;
     background-size: cover;
@@ -25,8 +26,17 @@
     font-size: 100px;
   }
   
-  .products {
+  .applications {
     background-image: url('../public/images/img-1.jpg');
+    background-position: center;
+    background-size: fill;
+    background-repeat: no-repeat;
+    color: #fff;
+    font-size: 100px;
+  }
+
+  .additional-skills {
+    background-image: url('../public/images/img-3.jpg');
     background-position: center;
     background-size: fill;
     background-repeat: no-repeat;
