--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,11 +1,11 @@
 .navbar {
     background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
     height: 80px;
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    position: sticky;
+    position: static;
     top: 0;
     z-index: 999;
   }
@@ -21,11 +21,11 @@
   .navbar-logo {
     color: #fff;
     justify-self: start;
-    margin-left: 20px;
+    /* margin-left: 1px; */
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
-    display: flex;
+    display: block;
     align-items: center;
   }
   
