--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,9 @@
   }
   
   .home,
-  .python-intro,
-  .applications,
-  .additional-skills,
+  .how-it-works,
+  .modules,
+  .about-us,
   .sign-up {
     display: flex;
     height: 90vh;
@@ -17,7 +17,7 @@
     font-size: 3rem;
   }
   
-  .python-intro {
+  .how-it-works {
     background-image: url('../public/images/img-2.jpg');
     background-position: center;
     background-size: cover;
@@ -26,7 +26,7 @@
     font-size: 100px;
   }
   
-  .applications {
+  .modules {
     background-image: url('../public/images/img-1.jpg');
     background-position: center;
     background-size: fill;
@@ -35,7 +35,7 @@
     font-size: 100px;
   }
 
-  .additional-skills {
+  .about-us {
     background-image: url('../public/images/img-3.jpg');
     background-position: center;
     background-size: fill;
