--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
-    position: static;
+    position: sticky;
     top: 0;
     z-index: 999;
   }
@@ -21,7 +21,7 @@
   .navbar-logo {
     color: #fff;
     justify-self: start;
-    /* margin-left: 1px; */
+    margin-left: 1px;
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
