--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
   }
   
   .modules {
-    background-image: url('../public/images/img-1.jpg');
+    /* background-image: url('../public/images/img-1.jpg'); */
     background-position: center;
     background-size: fill;
     background-repeat: no-repeat;
