--- a/src/components/Buttons/Button.css
+++ b/src/components/Buttons/Button.css
@@ -1,37 +1,39 @@
 :root {
-    --primary: #fff;
-  }
-  
-  .btn {
-    padding: 8px 20px;
-    border-radius: 2px;
-    outline: none;
-    border: none;
-    cursor: pointer;
-  }
+  --primary: #fff;
+  --topic-text: 20px;
+}
+
+/* CSS for directional buttons */
+.btn--directional {
+  padding: 8px 20px;
+  border-radius: 2px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
 
 .btn--primary {
-    background-color: var(--primary);
-    color: #242424;
-    border: 1px solid var(--primary);
+  background-color: var(--primary);
+  color: #242424;
+  border: 1px solid var(--primary);
 }
 
 .btn--outline {
-    background-color: transparent;
-    color: #fff;
-    padding: 8px 20px;
-    border: 1px solid var(--primary);
-    transition: all 0.3s ease-out;
+  background-color: transparent;
+  color: #fff;
+  padding: 8px 15px;
+  border: 1px solid var(--primary);
+  transition: all 0.3s ease-out;
 }
 
 .btn--medium {
-    padding: 8px 20px;
-    font-size: 20px;
+  padding: 8px 15px;
+  font-size: 20px;
 }
 
 .btn--large {
-    padding: 12px 26px;
-    font-size: 20px;
+  padding: 8px 15px;
+  font-size: 20px;
 }
 
 .btn--large:hover,
@@ -40,4 +42,18 @@
   background: #fff;
   color: #242424;
   transition: 250ms;
+}
+
+/* CSS for modules buttons */
+.btn--modules {
+  cursor: pointer;
+  margin: 0px;
+}
+
+.btn--modules-style {
+  background: rgba(0, 0, 0, 0);
+}
+
+.btn--modules-size {
+  font-size: var(--topic-text);
 }
