fixed button to take up whole width and clickable in the entire gray region of the module topic

--- a/src/components/Buttons/Button.css
+++ b/src/components/Buttons/Button.css
@@ -46,14 +46,19 @@
 
 /* CSS for modules buttons */
 .btn--modules {
+  outline: none;
+  border: none;
   cursor: pointer;
-  margin: 0px;
 }
 
 .btn--modules-style {
   background: rgba(0, 0, 0, 0);
+  text-align: left;
+  padding: 15px;
 }
 
 .btn--modules-size {
   font-size: var(--topic-text);
+  width: 100%;
+  height: 100%;
 }
