--- a/src/components/LecturePages/IntroToPython/LecturePages.css
+++ b/src/components/LecturePages/IntroToPython/LecturePages.css
@@ -14,6 +14,10 @@ p {
   line-height: 26pt;
 }
 
+ul {
+  margin-left: 50px;
+}
+
 .objective-container {
   padding: 10px;
   margin: 10px 100px 50px 100px;
