--- a/src/components/LecturePages/IntroToPython/LecturePages.css
+++ b/src/components/LecturePages/IntroToPython/LecturePages.css
@@ -1,12 +1,12 @@
 :root {
   --header-font-size: 25px;
   --content-font-size: 20px;
-  --left-margin: 20px;
+  --margins: 100px;
   --font-color: rgb(64, 66, 68);
+  --left-margin: 25px;
 }
 
 h4,
-ol,
 ul,
 li,
 p {
@@ -14,13 +14,14 @@ p {
   line-height: 26pt;
 }
 
-ul {
-  margin-left: 50px;
+ul,
+ol {
+  margin-left: 25px;
 }
 
 .objective-container {
-  padding: 10px;
-  margin: 10px 100px 50px 100px;
+  padding: 20px;
+  margin: 10px 100px 50px var(--margins);
   border-radius: 15px;
   box-shadow: 0 0 0 3px transparent;
   background: var(--card);
@@ -30,7 +31,7 @@ ul {
 }
 
 .information-container {
-  margin: 15px 15px 75px var(--left-margin); /*top right bottom left */
+  margin: 15px var(--margins) 100px var(--margins); /* var(--left-margin); top right bottom left */
   border-bottom: black;
 }
 
@@ -82,6 +83,22 @@ ul {
 
 .video-block {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   border-radius: 15px;
+}
+
+.column {
+  display: flex;
+  min-height: 100%;
+  flex-direction: column; /* added */
+}
+
+.row {
+  display: flex;
+  flex: 1; /* added */
+  justify-content: space-between;
+}
+
+.item {
+  flex: 1; /* added */
 }
