--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   height: 80px;
-  display: block;
+  display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.2rem;
@@ -15,7 +15,8 @@
   justify-content: center;
   align-items: center;
   height: 80px;
-  max-width: 1500px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .navbar-logo {
@@ -81,8 +82,9 @@
   }
 
   .nav-menu {
-    display: block;
+    display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 100%;
     height: 90vh;
     position: absolute;
@@ -121,7 +123,7 @@
   }
 
   .menu-icon {
-    display: block;
+    display: flex;
     position: absolute;
     top: 0;
     right: 0;
@@ -136,8 +138,8 @@
   }
 
   .nav-links-mobile {
-    display: block;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     margin: 2rem auto;
     border-radius: 4px;
     width: 80%;
