--- a/src/components/LecturePages/IntroToPython/LecturePages.css
+++ b/src/components/LecturePages/IntroToPython/LecturePages.css
@@ -72,31 +72,24 @@ ol {
 }
 
 .sample-images {
-  border: 3px solid #656464;
+  border: 2px solid #656464;
   border-radius: 15px;
   display: flex;
   justify-content: center;
-  padding: 10px;
-  margin-top: 20px;
-  margin-left: 20px;
-}
-
-.video-block {
-  display: flex;
-  justify-content: space-between;
-  border-radius: 15px;
+  margin: 15px 0px 75px 25px;
 }
 
 .column {
   display: flex;
   min-height: 100%;
-  flex-direction: column; /* added */
+  flex-direction: column;
+  gap: 10px;
 }
 
 .row {
   display: flex;
   flex: 1; /* added */
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .item {
