changed font to arial and re bolded navbar and module blocks

--- a/src/components/ModuleBlock/ModuleBlock.css
+++ b/src/components/ModuleBlock/ModuleBlock.css
@@ -67,6 +67,7 @@ em {
     width: min(100% - 25px, 800px);
     padding: 15px;
     margin: auto;
+    font-weight: bold;
 }
 
 .module-block-title {
