--- a/src/components/LecturePages/LecturePages.css
+++ b/src/components/LecturePages/LecturePages.css
@@ -6,6 +6,10 @@
   --left-margin: 25px;
 }
 
+h1 {
+  margin-top: 20px;
+}
+
 h4,
 ul,
 li,
@@ -29,20 +33,6 @@ ol {
   background-color: #f8f8f8;
 }
 
-.information-container {
-  margin: 15px var(--margins) 100px var(--margins); /* var(--left-margin); top right bottom left */
-  border-bottom: black;
-}
-
-.headers {
-  margin-left: var(--left-margin);
-  font-size: var(--header-font-size);
-}
-
-.title-block {
-  margin: 20px;
-}
-
 .title-image-container {
   display: flex;
   justify-content: center;
@@ -55,24 +45,21 @@ ol {
   margin-bottom: 50px;
 }
 
+/* CSS on the content */
+.information-container {
+  margin: 15px var(--margins) 85px var(--margins); /* var(--left-margin); top right bottom left */
+  color: var(--font-color);
+  font-size: var(--content-font-size);
+}
+
 .information-container-header {
   color: var(--font-color);
   font-size: var(--header-font-size);
 }
 
-.information-container-content {
-  color: var(--font-color);
-  font-size: var(--content-font-size);
-  margin-left: var(--left-margin);
-}
-
-.key-terms-list-header {
-  margin-left: var(--left-margin);
-}
 .key-terms-list {
-  padding-left: 50px;
+  padding-left: 25px;
   font-size: var(--content-font-size);
-  margin: 10px;
 }
 
 .sample-images {
