--- a/src/components/LecturePages/LecturePages.css
+++ b/src/components/LecturePages/LecturePages.css
@@ -1,13 +1,13 @@
 :root {
-  --header-font-size: 20px;
+  --header-font-size: 24px;
   --heading-padding-top-bottom: 20px;
-  --content-font-size: 16px;
+  --content-font-size: 18px;
   --margins: 100px;
   --margin-below-paragraph: 25px;
   --font-color: rgb(64, 66, 68);
   --left-margin: 25px;
 }
-
+7
 h1 {
   margin-top: 20px;
 }
